k8s/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-pod
  template:
    metadata:
      labels:
        app: auth-pod
    spec:
      containers:
        - image: secret333boy/auth:1.7
          name: auth-container
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
