k8s/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: auth-pod
