k8s/auth/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: secret333boy/auth:1.0
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    # - host: myapp.com
    - http:
      paths:
        - pathType: Prefix
          path: "/auth(/|$)(.*)"
          backend:
            service:
              name: auth
              port:
                number: 80
